--- a/blog/static/blog/css/rtl.css
+++ b/blog/static/blog/css/rtl.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: Sahel;
     src: url('https://cdn.fontcdn.ir/Font/Persian/Sahel/Sahel.eot');
@@ -11,7 +10,7 @@
   body {
       direction: rtl;
       text-align: right;
-      font-family: "Sahel";
+      font-family: Sahel;
       font-size: 14px;
   }
   
