--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -11,6 +11,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>{{ article.title }}</h1>
+            <time>{{ article.jpublish }} </time>
             <span class="subheading"></span>
           </div>
         </div>
@@ -21,7 +22,7 @@
   <article>
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-lg-8 col-md-10 mx-auto text-justify">
           {{article.description  | linebreaks }}
           
           </div>
