--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -36,15 +36,14 @@
 	
 	<div class="limiter">
 		
+		<div class="limiter">
 		{% if form.non_field_errors %}
-			<div class="errors">
-				
-				{% for error in form.non_field_errors %}
-					<span>{{ error }}</span>
-				{% endfor %}
+			<div class="myerrors">
+				{{form.non_field_errors.as_text}}
 			</div>
-			
 		{% endif %}
+
+
 			
 		<div class="container-login100">
 			<div class="wrap-login100">
@@ -60,6 +59,12 @@
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
 						{{ form.username |add_class:"input100" }}
 						<span class="focus-input100" data-placeholder="نام کاربری"></span>
+						{% if form.username.errors %}
+							<div class="myerrors">
+								{{form.username.errors}}
+							</div>
+						{% endif %}
+
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
