--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto text-justify">
-          {{article.description  | linebreaks }}
+          {{article.description  | safe }}
           
           </div>
           </div>
