--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -1,12 +1,10 @@
 {% extends 'registration/admin.html' %}
 
-{% block title %}
-عنوان مقالات
-{% endblock %}
+{% block title %}{% block title-meta %}
+لیست مقالات
+{% endblock %}{% endblock %}
 
 {% block main %}
-
-خوش امدید {{user.get_full_name}}
 
 <div class="row">
           <div class="col-12">
@@ -37,7 +35,7 @@
                       <td><img src="{{article.image.url}}" width=100 height=75 style='border-radius: 5px;' ></td>
                       <td>{{article.category_to_str}}</td>
                       <td>{{article.author.get_full_name}}</td>
-                      <td>{{article.description | truncatewords:"20"}}</td>
+                      <td>{{article.description | striptags | truncatewords:"20"}}</td>
                       <td>{{article.jpublish}}</td>
                       <td>
                         {% if article.status == 'p' %}
