--- a/templates/registration/sidbar.html
+++ b/templates/registration/sidbar.html
@@ -35,14 +35,14 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">
+                <a href="{% url 'accounts:home' %}" class="nav-link active">
                   <i class="fa fa-list nav-icon"></i>
                   <p>لیست مقالات</p>
 
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index2.html" class="nav-link">
+                <a href="{% url 'accounts:article-create' %}" class="nav-link">
                   <i class="fa fa-edit nav-icon"></i>
                   <p>افزودن مقاله</p>
 
