--- a/templates/registration/sidbar.html
+++ b/templates/registration/sidbar.html
@@ -109,7 +109,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'accounts:home' %}" class="nav-link active">
+                <a href="{% url 'accounts:stock-list' %}" class="nav-link active">
                   <i class="fa fa-list nav-icon"></i>
                   <p>لیست اجناس</p>
 
