--- a/templates/registration/AllStock.html
+++ b/templates/registration/AllStock.html
@@ -9,8 +9,8 @@
 {% for stock in object_list %}
 
 
-{% comment %} <td>{{stock.unit_price}}</td>
-<td>{{stock.product_id}}</td> {% endcomment %}
+ <td>{{stock.unit_price}}</td>
+<td>{{stock.product_id}}</td>
 
 
 {% endfor %}
