--- a/templates/registration/sidbar.html
+++ b/templates/registration/sidbar.html
@@ -86,7 +86,7 @@
             </a>
               <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link active">
+                <a href="{% url 'accounts:buyhistory' %}" class="nav-link active">
                   <i class="fa fa-list nav-icon"></i>
                   <p>تاریخچه</p>
                 </a>
