add email sender

--- a/templates/base.html
+++ b/templates/base.html
@@ -131,11 +131,11 @@
           hello {{ user }}
           </li>
           <a class = 'btn btn-success mb-1 mt-1 ml-2' href =" {% url 'accounts:home'%}">داشبورد</a>
-          <a class = 'btn btn-success mb-1 mt-1' href = "{% url 'accounts:logout'%}">خروج</a>
+          <a class = 'btn btn-success mb-1 mt-1' href = "{% url 'logout'%}">خروج</a>
 
           {% else %}
           <li>
-            <a class="btn btn-success mb-1 mt-1 mr-auto ml-2" href="{% url 'accounts:login' %}">ورود</a>
+            <a class="btn btn-success mb-1 mt-1 mr-auto ml-2" href="{% url 'login' %}">ورود</a>
             <a class="btn btn-success mb-1 mt-1 mr-auto ml-2" href="{% url 'accounts:register' %}">ثبت نام</a>
           </li>
           {% endif %}
