--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,14 +1,13 @@
 {% load static %}
 {% load widget_tweaks %}
- 
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
 <head>
-	<title>ورود</title>
+	<title>بازیابی رمز عبور</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="{% static 'registration/login/images/icons/favicon.ico' %}"/>
+	<link rel="icon" type="image/png" href="{% static 'registration/login/images/icons/favicon.ico' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/vendor/bootstrap/css/bootstrap.min.css' %}">
 <!--===============================================================================================-->
@@ -29,7 +28,6 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/css/main.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/css/rtl.css' %}">
-
 <!--===============================================================================================-->
 </head>
 <body>
@@ -44,60 +42,44 @@
 			<div class="wrap-login100">
 				<form class="login100-form validate-form" method="post">{% csrf_token %}
 					<span class="login100-form-title p-b-26 myfont">
-						ورود به سایت
+						بازیابی رمز عبور
 					</span>
 					<span class="login100-form-title p-b-48">
-						
+				
 					</span>
 
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-						{{form.username|add_class:"input100"}}
-						<span class="focus-input100" data-placeholder="نام کاربری"></span>
-						{% if form.username.errors %}
-							<div class="myerrors">
-								{{form.username.errors}}
-							</div>
-						{% endif %}
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<span class="btn-show-pass">
-							<i class="zmdi zmdi-eye"></i>
-						</span>
-						{{form.password|add_class:"input100"}}
-						<span class="focus-input100" data-placeholder="گذرواژه"></span>
-						{% if form.password.errors %}
-							<div class="myerrors">
-								{{form.password.errors}}
-							</div>
-						{% endif %}
-					</div>
-
-
-					<div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn myfont">
-								ورود
-							</button>
+					{% if validlink %}
+						<div class="wrap-input100 validate-input">
+							{{form.new_password1|add_class:"input100"}}
+							<span class="focus-input100" data-placeholder="گذرواژه"></span>
+							{% if form.new_password1.errors %}
+								<div class="myerrors">
+									{{form.new_password1.errors}}
+								</div>
+							{% endif %}
 						</div>
-					</div>
-					<br>
-					<div class="container-login100-form-btn">
-					<a class="myfont" href="{% url 'password_reset' %}"> <strong>فراموشی گذرواژه </strong> </a>
-					</div>
 
-					<div class="text-center">
-						<span class="txt1">
-							  حساب کاربری ندارید؟
-						</span>
-					
-					<hr>
-						<span><a class="txt2" href="{% url 'accounts:supplier_register' %}">
-							 <b>ثبت نام به عنوان فروشنده</b></a></span>
-						<span><a class="txt2" href="{% url 'accounts:customer_register' %}">
-							 <b>ثبت نام به عنوان خریدار</b></a></span>
-					</div>
+						<div class="wrap-input100 validate-input">
+							{{form.new_password2|add_class:"input100"}}
+							<span class="focus-input100" data-placeholder="تایید گذرواژه"></span>
+							{% if form.new_password2.errors %}
+								<div class="myerrors">
+									{{form.new_password2.errors}}
+								</div>
+							{% endif %}
+						</div>
+
+						<div class="container-login100-form-btn">
+							<div class="wrap-login100-form-btn">
+								<div class="login100-form-bgbtn"></div>
+								<button class="login100-form-btn myfont">
+									انجام
+								</button>
+							</div>
+						</div>
+					{% else %}
+						<p class="myfont">لینک منقضی شده است. برای بازیابی رمز عبور دوباره <a style="color: red; font-family: vazir; font-weight: bold;" href="{% url 'password_reset' %}">کلیک</a> کنید.</p>
+					{% endif %}
 				</form>
 			</div>
 		</div>
