--- a/templates/registration/sidbar.html
+++ b/templates/registration/sidbar.html
@@ -68,7 +68,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'accounts:password_change' %}" class="nav-link active">
+                <a href="{% url 'password_change' %}" class="nav-link active">
                   <i class="fa fa-list nav-icon"></i>
                   <p>تغییر گذرواژه</p>
 
