--- a/templates/registration/admin.html
+++ b/templates/registration/admin.html
@@ -49,7 +49,7 @@
         <a href="{% url 'blog:home' %}" class="nav-link">وبلاگ</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="{% url 'accounts:logout' %}" class="nav-link">خروج</a>
+        <a href="{% url 'logout' %}" class="nav-link">خروج</a>
       </li>
     
 
