--- a/templates/base.html
+++ b/templates/base.html
@@ -130,8 +130,8 @@
           <li class="nav-item">
           hello {{ user }}
           </li>
-          <a class = 'btn btn-success mb-1 mt-1 ml-2' href =" {% url 'accounts:home'%}">داشبورد</a>
-          <a class = 'btn btn-success mb-1 mt-1' href = "{% url 'logout'%}">خروج</a>
+          <a class = 'btn btn-success mb-1 mt-1 ml-2 mr-6' href =" {% url 'accounts:home'%}">داشبورد</a>
+          <a class = 'btn btn-success mb-1 mt-1 mr-6' href = "{% url 'logout'%}">خروج</a>
 
           {% else %}
           <li>
