--- a/templates/registration/sidbar.html
+++ b/templates/registration/sidbar.html
@@ -1,9 +1,9 @@
 {% load static %}
-
+{% load gravatar %}
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link">
-      <img src="{% static 'registration/adminlte/dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+      <img src="{% static 'img/logo.ico' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
       <span class="brand-text font-weight-light">بی دی مارکت</span>
     </a>
@@ -13,7 +13,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="{% static 'registration/adminlte/dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
+          <img src="{% gravatar_url user.email 150 %}" class="img-circle elevation-2" alt="{{User.email}}">
         </div>
         <div class="info">
           <a href="#" class="d-block">{{user.get_full_name}}</a>
