correct order number and empty cart

--- a/content/templates/content/productdetails.html
+++ b/content/templates/content/productdetails.html
@@ -139,7 +139,8 @@
                       >
                       {% csrf_token %}
                         <input type="hidden" id="custId" name="prosupid" value="{{ supplier.id }}">
-                        
+                        <label for="quantity">تعداد:</label>
+                        <input type="number" id="quantity" name="quantity" min="1" value="1">
                         <button type="submit"> افزودن به سبد</button>
                       </form>
 
