--- a/financial/templates/financial/pay.html
+++ b/financial/templates/financial/pay.html
@@ -8,7 +8,7 @@
 
 <form
       class=""
-      action="{% url 'financial:finalize_cart' %}"
+      action="{% url 'financial:pay' %}"
       method="POST"
     >
       {% csrf_token %}
