--- a/cart/templates/cart/showcart.html
+++ b/cart/templates/cart/showcart.html
@@ -6,7 +6,12 @@
 <div class="container">
   <div class="row">
 
-
+  <form
+      class=""
+      action="{% url 'financial:finalize_cart' %}"
+      method="POST"
+    >
+{% csrf_token %}
     {% for order in current_cart.order.all %}
 
     <div class="col-6">
@@ -30,24 +35,17 @@
                 <p>{{order.product_supplier_id.unit_price}}<span>تومان</span>
                 </p>
 
-
+{% comment %} 
                 <form class="form-inline special-form">
-
-                  {% comment %} <div class="form-group">
-                    <input
-                      type="text"
-                      class="form-input"
-                      value="34"
-                      data-note="4"
-                    >
-                  </div> {% endcomment %}
                   <button
                     class="btn btn-primary"
                     onclick="cart.trash(4)"
                     id="product-4"
                   >delete</button>
+                </form> {% endcomment %}
 
-                </form>
+                <label for="{{ order.id }}">تعداد:</label>
+                <input type="number" id="{{ order.id }}" name="{{ order.id }}" min="1" value="{{ order.number }}">
 
               </div>
             </div>
@@ -57,13 +55,11 @@
 
 
     </div>
+    {% empty %}
+    <p>سفارشی ثبت نکرده اید!</p>
     {% endfor %}
 
-    <form
-      class=""
-      action="{% url 'financial:finalize_cart' %}"
-      method="GET"
-    >
+    
       {% comment %} {% csrf_token %} {% endcomment %}
       {% comment %} <input
         type="hidden"
@@ -72,7 +68,10 @@
         value="{{ supplier.id }}"
       > {% endcomment %}
 
-      <button type="submit">نهایی شدن خرید</button>
+{% if current_cart %}
+<button type="submit">نهایی شدن خرید</button>
+{% endif %}
+      
     </form>
 
 
