--- a/templates/registration/sidbar.html
+++ b/templates/registration/sidbar.html
@@ -35,7 +35,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'accounts:home' %}" class="nav-link active">
+                <a href="{% url 'accounts:home' %}" class="nav-link ">
                   <i class="fa fa-list nav-icon"></i>
                   <p>لیست مقالات</p>
 
@@ -61,15 +61,15 @@
             </a>
               <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'accounts:profile' %}" class="nav-link active">
+                <a href="{% url 'accounts:profile' %}" class="nav-link ">
                   <i class="fa fa-list nav-icon"></i>
                   <p>مشاهده پروفایل</p>
 
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'password_change' %}" class="nav-link active">
-                  <i class="fa fa-list nav-icon"></i>
+                <a href="{% url 'password_change' %}" class="nav-link ">
+                  <i class="fa fa-edit nav-icon"></i>
                   <p>تغییر گذرواژه</p>
 
                 </a>
@@ -93,7 +93,7 @@
             </a>
               <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'accounts:buyhistory' %}" class="nav-link active">
+                <a href="{% url 'accounts:buyhistory' %}" class="nav-link ">
                   <i class="fa fa-list nav-icon"></i>
                   <p>تاریخچه</p>
                 </a>
@@ -116,7 +116,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'accounts:stock-list' %}" class="nav-link active">
+                <a href="{% url 'accounts:stock-list' %}" class="nav-link ">
                   <i class="fa fa-list nav-icon"></i>
                   <p>لیست اجناس</p>
 
