--- a/cart/templates/cart/showcart.html
+++ b/cart/templates/cart/showcart.html
@@ -44,6 +44,8 @@
                   >delete</button>
                 </form> {% endcomment %}
 
+                <a href="{% url 'cart:delete_order' order.id %}">حذف</a>
+
                 <label for="{{ order.id }}">تعداد:</label>
                 <input type="number" id="{{ order.id }}" name="{{ order.id }}" min="1" value="{{ order.number }}">
 
