--- a/accounts/templates/accounts/customer_register.html
+++ b/accounts/templates/accounts/customer_register.html
@@ -1,4 +1,5 @@
 {% load widget_tweaks %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'registration/login/css/rtl.css' %}">
     <title>ثبت نام</title>
 </head>
 <body>
@@ -30,7 +32,7 @@
                                       <span style="color:red">{{ error }}</span>
                                     {% endfor %}
                          {% endfor %}
-                             <input type="submit" value="Register" class="btn btn-block btn-primary">
+                             <input type="submit" value="ثبت نام" class="btn btn-block btn-primary">
                            </div>
                     </form>
                  </div>
