--- a/templates/registration/deletstock.html
+++ b/templates/registration/deletstock.html
@@ -12,7 +12,7 @@
     </div>
 		<div class="card-body py-4">
 			<form method="post">{% csrf_token %}
-			    <p class="py-2">آیا از حذف جنس  از «{{object.product_name}}» مطمئن هستید؟</p>
+			    <p class="py-2">آیا از حذف جنس مطمئن هستید؟</p>
 			    <input type="submit" value="حذف" class="btn btn-danger">
 			</form>
 		</div>
