--- a/financial/templates/financial/pay.html
+++ b/financial/templates/financial/pay.html
@@ -20,9 +20,9 @@
       > {% endcomment %}
 
 <h2> انتخاب آدرس: </h2>
-{% for paymeth in {{ request.user.customer.whatever }} %}
-      <input type="radio" id="{{ paymeth.method_title }}" name="payment_method" value="{{ paymeth.id }}">
-<label for="{{ paymeth.method_title }}">{{ paymeth.method_title }}</label><br>
+{% for address in  request.user.customer.address.all %}
+      <input type="radio" id="{{ address.id }}" name="address" value="{{ address.id }}">
+<label for="{{ address.id }}">{{ address.address }}</label><br>
 {% endfor %}
 
 <h2> درگاه بانک: </h2>
