add blog coment

--- a/templates/blog/basee.html
+++ b/templates/blog/basee.html
@@ -17,8 +17,8 @@
 
   <!-- Custom fonts for this template -->
   <link href="{% static 'blog/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  
+  
 
   <!-- Custom styles for this template -->
   <link href="{% static 'blog/css/clean-blog.min.css' %}" rel="stylesheet">
@@ -42,6 +42,13 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'content:home' %}">فروشگاه</a>
           </li>
+          </li>
+    {% comment %} {% for cat in category %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'blog:category' cat.slug %}">{{cat.title}}</a>
+        </li>
+    {% endfor %} {% endcomment %}
+
           
         </ul>
       </div>
@@ -66,7 +73,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
-            <li class="list-inline-item">
+            {% comment %} <li class="list-inline-item">
               <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
@@ -90,8 +97,8 @@
                 </span>
               </a>
             </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          </ul> {% endcomment %}
+          <p class="copyright text-muted">Copyright &copy; baby debugers</p>
         </div>
       </div>
     </div>
