--- a/content/templates/content/categories.html
+++ b/content/templates/content/categories.html
@@ -47,23 +47,31 @@
       float: right;
       border: 1px solid #ccc;
       background-color: #f1f1f1;
-      width: 20%;
+      width: 9%;
       height: calc(100vh - 60px);
     }
 
     /* Style the buttons inside the tab */
     .tab button {
       display: block;
-      background-color: inherit;
-      color: black;
-      padding: 22px 16px;
-      width: 100%;
-      border: none;
-      outline: none;
-      text-align: right;
-      cursor: pointer;
-      transition: 0.3s;
-      font - size: 17px;
+    background-color: inherit;
+    color: #00733e;
+    padding: 10px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: right;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+    font-size: 10px;
+ 
+    border: 1px solid #a5a5a5;
+    margin-bottom: 5px;
+    position: relative;
+    right: -5px;
+    border-radius: 3px;
+
     }
 
     /* Change background color of buttons on hover */
@@ -81,7 +89,7 @@
       float: right;
       padding: 0px 12px;
       border: 1px solid #ccc;
-      width: 80%;
+      width: 90%;
       border-right: none;
       height: calc(100vh - 60px);
           background-color: #fcffb4;
@@ -108,6 +116,7 @@
     {%endcomment%}
     {%endfor%}
   </div>
+
   {% for cat in main_cats %}
   <div
     id="{{ cat.cat_name }}"
