--- a/content/templates/content/home.html
+++ b/content/templates/content/home.html
@@ -1,33 +1,113 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
+<!-- <div>
+  {{ subs|unordered_list }} {% comment %} {% for sub in subs %} {% if
+  sub.inner_sub_id is NULL %}
+  <a href="#">{{ sub.cat_name }}</a>
+  <ul>
+    {% for sub2 in subs %} {% if sub2.inner_sub_id == sub %}
+    <li><a href="#">{{ sub2.cat_name }}</a></li>
+    {% endif %} {% endfor %}
+  </ul>
+  {% endif %} {% endfor %} {% endcomment %}
+</div> -->
+{% load static %}
+<img src="{% static 'img/slider.jpg' %}" class="slider-img" />
+<section class="feature_part section_padding">
+  <div class="container">
+      <!-- <div class="row justify-content-between">
+          <div class="col-lg-6">
+              <div class="feature_part_tittle">
+                  <h3>با استفاده از مواد ارگانیک، محصولات استانداردی در اینجا تولید می شود.</h3>
+              </div>
+          </div>
+          <div class="col-lg-5">
+              <div class="feature_part_content">
+                  <p>شرکت ما با بهره گیری از استراتژی های مختلف و استفاده از مواد ارگانیک و طبیعی سعی در تولید محصولاتی با کیفیت و مطابق نیاز شما دارد.</p>
+              </div>
+          </div>
+      </div> -->
+      <div class="row justify-content-center">
+          <div class="col-lg-3 col-sm-6">
+              <div class="single_feature_part">
+                  <img src="{% static 'img/feature_icon_1.svg' %}">
+                  <h4>پشتیبانی کارت های اعتباری</h4>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="single_feature_part">
+                  <img src="{% static 'img/feature_icon_2.svg' %}">
+                  <h4>سفارش آنلاین</h4>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="single_feature_part">
+                  <img src="{% static 'img/feature_icon_3.svg' %}">
+                  <h4>تحویل رایگان</h4>
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+              <div class="single_feature_part">
+                  <img src="{% static 'img/feature_icon_4.svg' %}">
+                  <h4>محصولات همراه با هدیه</h4>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<hr>
+<section class="ptop-35">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h3><img src="{% static 'img/logo.jpeg' %}" class="title-img"/>آخرین محصولات</h3>
+      </div>
+    </div>
+    <div class="row">
 
-{% block content %}
+      <div class="col-md-12">
+        <div class="product_list">
+            <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single_product_item">
+                        <img src="{% static 'img/product_list_1.png' %}" alt="#" class="img-fluid">
+                        <h5> <a href="single-product.html">بالشتک های طبی از جنس فوم</a> </h5>
+                        <p><span>قیمت :</span>25000 تومان</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single_product_item">
+                        <img src="{% static 'img/product_list_2.png' %}" alt="#" class="img-fluid">
+                        <h5> <a href="single-product.html">بالشتک  از جنس فوم</a> </h5>
+                        <p><span>قیمت :</span>25000 تومان</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single_product_item">
+                        <img src="{% static 'img/product_list_3.png' %}" alt="#" class="img-fluid">
+                        <h5> <a href="single-product.html">بالشتک  از جنس فوم</a> </h5>
+                        <p><span>قیمت :</span>25000 تومان</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                  <div class="single_product_item">
+                      <img src="{% static 'img/product_list_3.png' %}" alt="#" class="img-fluid">
+                      <h5> <a href="single-product.html">بالشتک  از جنس فوم</a> </h5>
+                      <p><span>قیمت :</span>25000 تومان</p>
+                  </div>
+              </div>
+              </div></div></div>
+    </div>
+  </div>
+</section>
 
+{% comment %}
 <div>
-{{ subs|unordered_list }}
-    {% comment %} {% for sub in subs %}
-        {% if sub.inner_sub_id is NULL %}
-        <a href='#'>{{ sub.cat_name }}</a>
-        <ul>
-        {% for sub2 in subs %}
-            {% if sub2.inner_sub_id == sub %}
-                <li><a href="#">{{ sub2.cat_name }}</a></li>
-            {% endif %}
-        {% endfor %}
-        </ul>
-        {% endif %}
-    {% endfor %} {% endcomment %}
-    
-
+  <h3>address</h3>
+  <ul>
+    {% for elm in address%}
+    <li>city : {{elm.city}}</li>
+    {% endfor %}
+  </ul>
 </div>
-
-{% comment %} <div>
-    <h3>address</h3>
-    <ul>
-        {% for elm in address%}
-            <li>city : {{elm.city}} </li>
-        {% endfor %}
-    </ul>
-</div> {% endcomment %}
-
-{% endblock %}
+{% endcomment %} {% endblock %}
