--- a/content/templates/content/home.html
+++ b/content/templates/content/home.html
@@ -13,7 +13,7 @@
 </div> -->
 {% load static %}
 <img src="{% static 'img/slider.jpg' %}" class="slider-img" />
-<section class="feature_part section_padding">
+<section class="feature_part section_padding bg-orange">
   <div class="container">
       <!-- <div class="row justify-content-between">
           <div class="col-lg-6">
