--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1635,6 +1635,9 @@ width:100% !important;
   border-radius: 50%;
   border:1px solid red;;
 }
+.bg-orange{
+ background-color: #f89714
+}
 .box {
   background-color:green;
   
