--- a/templates/base.html
+++ b/templates/base.html
@@ -234,8 +234,8 @@
         </div>
         <div class="search_input" id="search_input_box">
             <div class="container ">
-                <form class="d-flex justify-content-between search-inner">
-                    <input type="text" class="form-control" id="search_input" placeholder="جست و جو">
+                <form method="get" action="{% url 'content:search-product'%}" class="d-flex justify-content-between search-inner">
+                    <input type="text" class="form-control" id="search_input" name='search' placeholder="جست و جو">
                     <button type="submit" class="btn"></button>
                     <span class="ti-close" id="close_search" title="Close Search"></span>
                 </form>
